--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -18,7 +18,7 @@
 -->
 <html>
 <head>
-  <meta http-equiv="refresh" content="0; URL=helloWorld.jsf">
+  <meta http-equiv="refresh" content="0; URL=helloWorld.xhtml">
 </head>
 </html>
         
